tree-sitter-taggerscript/test/corpus/basics.txt
================================================================================
Plain text
================================================================================

hello world

--------------------------------------------------------------------------------

(source_file
  (text))

================================================================================
Simple variable
================================================================================

%artist%

--------------------------------------------------------------------------------

(source_file
  (text)
  (variable
    name: (variable_name))
  (text))

================================================================================
Variable with colons
================================================================================

%musicbrainz:trackid%

--------------------------------------------------------------------------------

(source_file
  (text)
  (variable
    name: (variable_name))
  (text))

================================================================================
Simple function call
================================================================================

$set(title,Hello)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (argument_text)))
  (text))

================================================================================
Empty function call
================================================================================

$delete()

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name))
  (text))

================================================================================
Nested function calls
================================================================================

$set(title,$upper(%artist%))

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (function_call
        name: (function_name)
        (argument
          (variable
            name: (variable_name))))))
  (text))

================================================================================
Simple noop
================================================================================

$noop(this is a comment)

--------------------------------------------------------------------------------

(source_file
  (text)
  (noop)
  (text))

================================================================================
Noop with nested parens
================================================================================

$noop(text (nested) end)

--------------------------------------------------------------------------------

(source_file
  (text)
  (noop)
  (text))

================================================================================
Deeply nested noop
================================================================================

$noop(a (b (c) d) e)

--------------------------------------------------------------------------------

(source_file
  (text)
  (noop)
  (text))

================================================================================
Empty noop
================================================================================

$noop()

--------------------------------------------------------------------------------

(source_file
  (text)
  (noop)
  (text))

================================================================================
Escape sequences
================================================================================

\$ \% \( \) \, \\ \n \t \uABCD

--------------------------------------------------------------------------------

(source_file
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text)
  (escape_sequence)
  (text))

================================================================================
Variable inside function argument
================================================================================

$set(title,%artist% - %title%)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (variable
        name: (variable_name))
      (argument_text)
      (variable
        name: (variable_name))))
  (text))

================================================================================
Conditional with noop
================================================================================

$if(%compilation%,$set(albumartist,Various Artists),$noop(not implemented))

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (variable
        name: (variable_name)))
    (argument
      (function_call
        name: (function_name)
        (argument
          (argument_text))
        (argument
          (argument_text))))
    (argument
      (noop)))
  (text))

================================================================================
Empty trailing argument
================================================================================

$if(a,b,)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (argument_text)))
  (text))

================================================================================
Empty middle argument
================================================================================

$if(a,,c)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (argument_text)))
  (text))

================================================================================
Multiple empty arguments
================================================================================

$if(,,,)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name))
  (text))

================================================================================
If2 with variable args
================================================================================

$if2(a,b,c)

--------------------------------------------------------------------------------

(source_file
  (text)
  (function_call
    name: (function_name)
    (argument
      (argument_text))
    (argument
      (argument_text))
    (argument
      (argument_text)))
  (text))
